src/objects/Contact_Us_Brand_Language__c.object
<CustomObject>
    <description>Junction object storing brand- and language-specific settings and translations</description>
    <fields>
        <fullName>Accept_Terms_and_Conditions_Label_Part_1__c</fullName>
        <description>This is the part of the terms and conditions label that comes before the link to the terms and conditions.</description>
        <label>Accept Terms and Conditions Label Part 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accept_Terms_and_Conditions_Label_Part_2__c</fullName>
        <description>This is the part of the terms and conditions label that will link to the terms and conditions</description>
        <label>Accept Terms and Conditions Label Part 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accept_Terms_and_Conditions_Label_Part_3__c</fullName>
        <description>This is the part (can be empty) of the terms and conditions label that will come after the link to the terms and conditions</description>
        <label>Accept Terms and Conditions Label Part 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_Capture_Style__c</fullName>
        <description>Style of Age Capture to display on Contact Us page</description>
        <label>Age Capture Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MM/YYYY</fullName>
                </value>
                <value>
                    <fullName>Age Range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_Country_Language__c</fullName>
        <formula>Contact_Us_Brand__r.Brand__c + &quot; - &quot; + TEXT(Contact_Us_Language__r.Country__c) + &quot; - &quot; + TEXT(Contact_Us_Language__r.Language__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand/Country/Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <formula>Contact_Us_Brand__r.Name</formula>
        <label>Brand Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Contact_Us_Brands_Languages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Submit_Ask_gender__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Display Gender input on Case submission form?</description>
        <label>Case Submit Ask gender</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Submit_Minimum_Age__c</fullName>
        <description>Minimum age required to submit a case.  If Age Capture Style is blank (no age capture), this setting is ignored, and all users can submit cases.</description>
        <label>Case Submit Minimum Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChatImageUrl__c</fullName>
        <description>Chat image url for Proactive Chat required to be sent to brand.com</description>
        <label>Proactive Chat Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Brand__c</fullName>
        <label>Contact Us Brand</label>
        <referenceTo>Contact_Us_Brand__c</referenceTo>
        <relationshipLabel>Contact Us Brands Languages</relationshipLabel>
        <relationshipName>Contact_Us_Brands_Languages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Language__c</fullName>
        <label>Contact Us Language</label>
        <referenceTo>Contact_Us_Language__c</referenceTo>
        <relationshipLabel>Contact Us Brands Languages</relationshipLabel>
        <relationshipName>Contact_Us_Brands_Languages</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Display_Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked will display summary information for the article on both featured and searched articles</description>
        <inlineHelpText>If checked will display summary information for the article on both featured and searched articles</inlineHelpText>
        <label>Display Summary?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <label>ExternalId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Featured_Article_1__c</fullName>
        <description>Featured article to display in 1st (highest) position</description>
        <inlineHelpText>Featured article to display in 1st (highest) position</inlineHelpText>
        <label>Featured Article 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Featured_Article_2__c</fullName>
        <description>Featured article to display in 2nd position</description>
        <inlineHelpText>Featured article to display in 2nd position</inlineHelpText>
        <label>Featured Article 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Featured_Article_3__c</fullName>
        <description>Featured article to display in the 3rd position</description>
        <inlineHelpText>Featured article to display in the 3rd position</inlineHelpText>
        <label>Featured Article 3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_agree_URL__c</fullName>
        <label>I agree URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_Hover_Text_Facebook__c</fullName>
        <label>Link Hover Text Facebook</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_Hover_Text_Pinterest__c</fullName>
        <label>Link Hover Text Pinterest</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_Hover_Text_Twitter__c</fullName>
        <label>Link Hover Text Twitter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_Hover_Text_Wechat__c</fullName>
        <label>Link Hover Text Wechat</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_Hover_Text_Weibo__c</fullName>
        <label>Link Hover Text Weibo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_URL_Community_Site__c</fullName>
        <description>Link to Community Site (e.g., GetSatisfaction).  If blank, community tab will not be displayed on Contact Us page.</description>
        <label>Link URL Community Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_URL_Facebook__c</fullName>
        <label>Link URL Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_URL_Pinterest__c</fullName>
        <label>Link URL Pinterest</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_URL_Twitter__c</fullName>
        <label>Link URL Twitter</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_URL_Wechat__c</fullName>
        <label>Link URL Wechat</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_URL_Weibo__c</fullName>
        <label>Link URL Weibo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Live_Agent_Button_Id__c</fullName>
        <label>Live Agent Button Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Agent_Deployment_Id__c</fullName>
        <label>Live Agent Deployment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_Hover_Text__c</fullName>
        <description>Text displayed when user hovers mouse over brand logo.</description>
        <label>Logo Hover Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_1_Label__c</fullName>
        <label>Phone 1 Label</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_1_Number__c</fullName>
        <label>Phone 1 Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_2_Label__c</fullName>
        <label>Phone 2 Label</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_2_Number__c</fullName>
        <label>Phone 2 Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_3_Label__c</fullName>
        <label>Phone 3 Label</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_3_Number__c</fullName>
        <label>Phone 3 Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Hours_Label__c</fullName>
        <label>Phone Hours Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q10_Picklist_Values__c</fullName>
        <inlineHelpText>Enter picklist values on separate lines.  Only used when Question Type is picklist.</inlineHelpText>
        <label>Q10 Picklist Values</label>
        <length>4098</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q10_Question_Type__c</fullName>
        <label>Q10 Question Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q10_Question__c</fullName>
        <label>Q10 Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q10_Reasons_For_Writing__c</fullName>
        <label>Q10 Reasons For Writing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Testimonial</fullName>
                </value>
                <value>
                    <fullName>2. Inquiry</fullName>
                </value>
                <value>
                    <fullName>3. Availability</fullName>
                </value>
                <value>
                    <fullName>4. Complaint</fullName>
                </value>
                <value>
                    <fullName>5. Requests for Free Items</fullName>
                </value>
                <value>
                    <fullName>6. Promotions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q1_Picklist_Values__c</fullName>
        <inlineHelpText>Enter picklist values on separate lines.  Only used when Question Type is picklist.</inlineHelpText>
        <label>Q1 Picklist Values</label>
        <length>4098</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q1_Question_Type__c</fullName>
        <label>Q1 Question Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q1_Question__c</fullName>
        <label>Q1 Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q1_Reasons_For_Writing__c</fullName>
        <label>Q1 Reasons For Writing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Testimonial</fullName>
                </value>
                <value>
                    <fullName>2. Inquiry</fullName>
                </value>
                <value>
                    <fullName>3. Availability</fullName>
                </value>
                <value>
                    <fullName>4. Complaint</fullName>
                </value>
                <value>
                    <fullName>5. Requests for Free Items</fullName>
                </value>
                <value>
                    <fullName>6. Promotions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q2_Picklist_Values__c</fullName>
        <inlineHelpText>Enter picklist values on separate lines.  Only used when Question Type is picklist.</inlineHelpText>
        <label>Q2 Picklist Values</label>
        <length>4098</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q2_Question_Type__c</fullName>
        <label>Q2 Question Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q2_Question__c</fullName>
        <label>Q2 Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q2_Reasons_For_Writing__c</fullName>
        <label>Q2 Reasons For Writing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Testimonial</fullName>
                </value>
                <value>
                    <fullName>2. Inquiry</fullName>
                </value>
                <value>
                    <fullName>3. Availability</fullName>
                </value>
                <value>
                    <fullName>4. Complaint</fullName>
                </value>
                <value>
                    <fullName>5. Requests for Free Items</fullName>
                </value>
                <value>
                    <fullName>6. Promotions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Live_Chat_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field may be superceded with chat-specific field(s) (e.g., Chat Deployment, Skills, etc), in which case this field should become a formula based on the other field(s).</description>
        <label>Show Live Chat Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signup_Blurb__c</fullName>
        <description>CRM Banner signup blurb/strap line</description>
        <inlineHelpText>CRM Banner signup blurb/strap line</inlineHelpText>
        <label>Signup Blurb</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Signup_Button_Label__c</fullName>
        <description>CRM Banner signup button label</description>
        <inlineHelpText>CRM Banner signup button label</inlineHelpText>
        <label>Signup Button Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signup_Image__c</fullName>
        <description>CRM Banner footer image</description>
        <inlineHelpText>CRM Banner footer image</inlineHelpText>
        <label>Signup Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>StandaloneChatUrl__c</fullName>
        <formula>IF(AND(!ISBLANK(Live_Agent_Button_Id__c), !ISBLANK(Live_Agent_Deployment_Id__c)), $Setup.ContactUsURL__c.CareHubUrl__c + &apos;/gcr_proChatRedirect?brand=&apos; +  Contact_Us_Brand__r.Name  + &apos;&amp;country=&apos; + Contact_Us_Language__r.GCRCountryIsoCode__c + &apos;&amp;language=&apos; + Contact_Us_Language__r.GCRLanguageIsoCode__c, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standalone Chat Page Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supports_SmartCare__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked will be passed to Sprinklr SmartCare for NLP/Initial response handling</description>
        <inlineHelpText>If checked will be passed to Sprinklr SmartCare for NLP/Initial response handling</inlineHelpText>
        <label>Supports SmartCare?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Widget__c</fullName>
        <inlineHelpText>Populating this field will result in the Get Satisfaction Widget on the ContactUs page.</inlineHelpText>
        <label>Widget Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noPrechatProactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to determine if pre chat form required before chat</description>
        <label>noPrechatProactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>noPrechatStandalone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to determine if a pre-chat form is required for standalone chat</description>
        <label>noPrechatStandalone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>signup_URL__c</fullName>
        <description>CRM Banner signup URL to redirect consumer to</description>
        <inlineHelpText>CRM Banner signup URL to redirect consumer to</inlineHelpText>
        <label>signup URL</label>
        <type>Url</type>
    </fields>
    <label>Contact Us Brand Language</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Brand_Name__c</columns>
        <columns>Signup_Button_Label__c</columns>
        <columns>Brand_Country_Language__c</columns>
        <columns>Contact_Us_Language__c</columns>
        <columns>Case_Submit_Minimum_Age__c</columns>
        <columns>Age_Capture_Style__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Australia</fullName>
        <columns>NAME</columns>
        <columns>Brand_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Brand_Country_Language__c</columns>
        <columns>Contact_Us_Language__c</columns>
        <columns>Case_Submit_Minimum_Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Us_Language__c</field>
            <operation>contains</operation>
            <value>english-AUS</value>
        </filters>
        <label>Australia</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Braun</fullName>
        <columns>NAME</columns>
        <columns>Brand_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Brand_Country_Language__c</columns>
        <columns>Contact_Us_Language__c</columns>
        <columns>Case_Submit_Minimum_Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_Country_Language__c</field>
            <operation>contains</operation>
            <value>Braun</value>
        </filters>
        <label>Braun</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Germany</fullName>
        <columns>NAME</columns>
        <columns>Brand_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Brand_Country_Language__c</columns>
        <columns>Contact_Us_Language__c</columns>
        <columns>Case_Submit_Minimum_Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_Country_Language__c</field>
            <operation>contains</operation>
            <value>Germany</value>
        </filters>
        <label>Germany</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>India</fullName>
        <columns>NAME</columns>
        <columns>Brand_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Brand_Country_Language__c</columns>
        <columns>Contact_Us_Language__c</columns>
        <columns>Case_Submit_Minimum_Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_Country_Language__c</field>
            <operation>contains</operation>
            <value>india</value>
        </filters>
        <label>India</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Indonesia</fullName>
        <columns>NAME</columns>
        <columns>Brand_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Brand_Country_Language__c</columns>
        <columns>Contact_Us_Language__c</columns>
        <columns>Case_Submit_Minimum_Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_Country_Language__c</field>
            <operation>contains</operation>
            <value>indonesia</value>
        </filters>
        <label>Indonesia</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Israel</fullName>
        <columns>NAME</columns>
        <columns>Brand_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Brand_Country_Language__c</columns>
        <columns>Contact_Us_Language__c</columns>
        <columns>Case_Submit_Minimum_Age__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_Country_Language__c</field>
            <operation>contains</operation>
            <value>israel</value>
        </filters>
        <label>Israel</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Japan</fullName>
        <columns>NAME</columns>
        <columns>Brand_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Brand_Country_Language__c</columns>
        <columns>Contact_Us_Language__c</columns>
        <columns>Case_Submit_Minimum_Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Us_Language__c</field>
            <operation>contains</operation>
            <value>Japanese</value>
        </filters>
        <label>Japan</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Korea</fullName>
        <columns>NAME</columns>
        <columns>Brand_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Brand_Country_Language__c</columns>
        <columns>Contact_Us_Language__c</columns>
        <columns>Case_Submit_Minimum_Age__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Us_Language__c</field>
            <operation>contains</operation>
            <value>Korea</value>
        </filters>
        <label>Korea</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_Zealand</fullName>
        <columns>NAME</columns>
        <columns>Brand_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Brand_Country_Language__c</columns>
        <columns>Contact_Us_Language__c</columns>
        <columns>Case_Submit_Minimum_Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Us_Language__c</field>
            <operation>contains</operation>
            <value>english-nz</value>
        </filters>
        <label>New Zealand</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>P_G</fullName>
        <columns>NAME</columns>
        <columns>Brand_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Brand_Country_Language__c</columns>
        <columns>Contact_Us_Language__c</columns>
        <columns>Case_Submit_Minimum_Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_Country_Language__c</field>
            <operation>contains</operation>
            <value>P&amp;G</value>
        </filters>
        <label>P&amp;G</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pampers</fullName>
        <columns>NAME</columns>
        <columns>Brand_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Brand_Country_Language__c</columns>
        <columns>Contact_Us_Language__c</columns>
        <columns>Case_Submit_Minimum_Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_Country_Language__c</field>
            <operation>contains</operation>
            <value>Pampers</value>
        </filters>
        <label>Pampers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Philippines</fullName>
        <columns>NAME</columns>
        <columns>Brand_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Brand_Country_Language__c</columns>
        <columns>Contact_Us_Language__c</columns>
        <columns>Case_Submit_Minimum_Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_Country_Language__c</field>
            <operation>contains</operation>
            <value>Philippines</value>
        </filters>
        <label>Philippines</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>my_view</fullName>
        <columns>NAME</columns>
        <columns>Brand_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Brand_Country_Language__c</columns>
        <columns>Contact_Us_Language__c</columns>
        <columns>Case_Submit_Minimum_Age__c</columns>
        <columns>Accept_Terms_and_Conditions_Label_Part_1__c</columns>
        <columns>Accept_Terms_and_Conditions_Label_Part_2__c</columns>
        <columns>Accept_Terms_and_Conditions_Label_Part_3__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Live_Agent_Deployment_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_Country_Language__c</field>
            <operation>contains</operation>
            <value>jap</value>
        </filters>
        <label>my view</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CBL-{0000}</displayFormat>
        <label>Contact Us Brand Language Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Us Brands Languages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Article_Number_Format</fullName>
        <active>true</active>
        <description>prevents incorrect article number format being entered</description>
        <errorConditionFormula>/*example: REGEX(SSN__c, &quot;[0-9]{3}-[0-9]{2}-[0-9]{4}&quot;)*/
OR(
NOT(
REGEX(Featured_Article_1__c, &quot;[0-9]{9}|^$&quot;)
),
NOT(
REGEX(Featured_Article_2__c, &quot;[0-9]{9}|^$&quot;)
),
NOT(
REGEX(Featured_Article_3__c, &quot;[0-9]{9}|^$&quot;)
),
NOT(
REGEX(Featured_Article_4__c, &quot;[0-9]{9}|^$&quot;)
),
NOT(
REGEX(Featured_Article_5__c, &quot;[0-9]{9}|^$&quot;)
))</errorConditionFormula>
        <errorMessage>The article number format you have entered is incorrect. Please check the article number and try again. An article number should look like &quot;000046513&quot;.</errorMessage>
    </validationRules>
</CustomObject>